--- a/hbdardy.html
+++ b/hbdardy.html
@@ -168,7 +168,7 @@
         
         .birthday-active {
             animation: pulse 2s infinite;
-            text-shadow: 0 0 10px #ffff00, 0 0 20px #ffff00;
+            text-shadow: 0 0 10px red, 0 0 20px skyblue;
         }
 
         footer {
