--- a/hbdardy.html
+++ b/hbdardy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hitung Mundur Ulang Tahun</title>
+    <title>09-04-2006</title>
     <style>
         * {
             margin: 0;
