--- a/index.html
+++ b/index.html
@@ -740,6 +740,8 @@
                     <a href="hbdhelmy.html" class="myButton">HBD<br>30-11-2005</a>
                 </div>
             </div>
+            /*Maps*/
+<div class="embed-map-fixed"><div class="embed-map-container"><iframe class="embed-map-frame" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&height=400&hl=en&q=Prefektur%20tokyo&t=&z=20&ie=UTF8&iwloc=B&output=embed"></iframe><a href="https://sprunkiretake.net" style="font-size:2px!important;color:gray!important;position:absolute;bottom:0;left:0;z-index:1;max-height:1px;overflow:hidden">sprunki retake</a></div><style>.embed-map-fixed{position:relative;text-align:right;width:300px;height:300px;}.embed-map-container{overflow:hidden;background:none!important;width:300px;height:300px;}.embed-map-frame{width:300px!important;height:300px!important;}</style></div>
               <!-- Subscription Plans Section -->
 <section class="subscription-section">
     <div class="subscription-container">
