--- a/verify.html
+++ b/verify.html
@@ -264,7 +264,7 @@ select, input[type="text"] {
         successSound.play();
         card.classList.add('fade-out');
         setTimeout(() => {
-          document.body.innerHTML = '<h1 style="text-align:center;margin:auto;color:#00ffc3;font-size:2rem;">Selamat datang di halaman utama!</h1><h4><a href="index.html" style="text-decoration:none;color:white;">Tekan Saya Untuk melanjut...</a><h4>';
+          document.body.innerHTML = '<h1 style="text-align:center;margin:auto;color:#00ffc3;font-size:2rem;">Selamat datang di halaman utama!</h1><h4><a href="indexx.html" style="text-decoration:none;color:white;">Tekan Saya Untuk melanjut...</a><h4>';
         }, 2400);
       } else {
         result.textContent = 'Yaelah Soal Gitu aja Jawabannya Salah wkwk';
