--- a/verify.html
+++ b/verify.html
@@ -288,7 +288,7 @@ select, input[type="text"] {
       }, 1000);
     }
 
-    typeSelect.addEventListener('change', loadQuestion);
+    typeSelect.addEventListener('change', loa
     window.onload = loadQuestion;
   </script></body>
 </html>
