--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ select, input[type="text"] {
 </head>
 <body>
   <div class="card" id="card">
-    <h2>Pilih Jenis Soal</h2>
+    <h2>Ini Adalah Verifikasi<br>Pilih Jenis Soal mu☠️</h2>
    <select id="typeSelect">
   <option value="math">Matematika</option>
   <option value="japanese">Bahasa Jepang</option>
