--- a/indexx.html
+++ b/indexx.html
@@ -398,7 +398,7 @@
                <div class="social-links">
                     <a href="https://wa.link/63hufc" target="_blank" class="social-link facebook"><i class="fab fa-whatsapp"></i></a>
                     <a href="https://www.facebook.com/profile.php?id=61573416713648" target="_blank" class="social-link twitter"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/qrdy_hutqsoit09?igsh=MW0zYmpiZjZqaHVoZQ==" target="_blank" class="social-link instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/qrdy_09042006?igsh=MW0zYmpiZjZqaHVoZQ==" target="_blank" class="social-link instagram"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.tiktok.com/@qrdy_hutqsoit09?_t=ZS-8vE0zNv60x6&_r=1" target="_blank" class="social-link linkedin"><i class="fab fa-tiktok"></i></a>
                     <a href="https://youtube.com/@ardylgsihombing?si=K0IujVADORnRdnoo" target="_blank" class="social-link"><i class="fab fa-youtube"></i></a>
                 </div>
@@ -474,7 +474,7 @@
                         <a href="https://youtube.com/@ardylgsihombing?si=VmQs7IKMgSQbn_A0" aria-label="Youtube">You</a>
                         <a href="jdjjdj" aria-label="LinkedIn">Lin</a>
                         <a href="https://github.com/ArdyProject" aria-label="GitHub">Git</a>
-                        <a href="https://www.instagram.com/qrdy_hutqsoit09?igsh=MW0zYmpiZjZqaHVoZQ==" aria-label="Instagram">Ins</a>
+                        <a href="https://www.instagram.com/qrdy_09042006?igsh=MW0zYmpiZjZqaHVoZQ==" aria-label="Instagram">Ins</a>
                     </div>
                 </div>
             </div>
